  Fix issue MR-196 - Cannot export list without usernames and passwords
  Fix issue MR-199 - when using screen inside putty, screen becomes dead when reduce mremoteNG
  Fix issue MR-202 - The Connection "Tab" show Ampersands as underscores.
  Fix issue MR-214 - Hostname/IP reset
  Fix issue MR-233 - Backslash at end of password prevents success of putty invocation and corresponding auto-logon
  Fix issue MR-277 - Inheritance configuration button not appear in configuration tab 
  Fix issue MR-284 - SSH: Text not showing properly
  Fix issue MR-299 - mRemoteNG crashes while using remotely (Windows XP remote desktop)
  mRemoteNG now requires .NET Framework 3.0 instead of 2.0.
  Added compatibility check for "Use FIPS compliant algorithms" security setting.
  Improved reporting of errors when encrypting and decrypting connection files.
  Updated translations.
  Added translations for Spanish (Argentina), Italian, Polish, Portuguese, Chinese (Simplified).
  The panel tabs are now hidden if only one panel is open.
  Fix focus issue with RDP connections when changing tabs.
  Show changes live as connection tabs are being dragged around to change their order.
  Updated PuTTY to version 0.62.
  Improved error handling when loading connection files.
  Fixed bugs with creating a new connection file.
  A backup of the connection file is saved when it is loaded. The most recent ten backup copies are kept.
  Added the option to use a smart card for RD Gateway credentials.
  Made the use of CredSSP for RDP connections optional.
  Updated VncSharpNG to version 1.2.4440.36644.
  Added debugging symbols for VncSharpNG.
  Improved the use of Tab and Shift-Tab to cycle through entries in the Config grid.

1.69 (2011-12-09):
  Fixed issue #66 - Fresh Install Fails to Create Config
  Fixed issue #69 - Connection file gets erased
  Fixed issue #72 - scrollbars added to RDP window after minimize/restore of mRemoteNG
  Disabled automatic updates in the portable edition